<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_user"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_user"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/app_setting"
        app:showAsAction="ifRoom" />
</menu>